force-app/main/default/objects/Operation_Meals_And_Rest_Calculation__mdt/fields/Break_Type__c.field-meta.xml
<CustomField>
    <fullName>Break_Type__c</fullName>
    <label>Break Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Meal</fullName>
                <default>true</default>
                <label>Meal</label>
            </value>
            <value>
                <fullName>Rest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>