force-app/main/default/objects/Operation_Meals_And_Rest_Calculation__mdt/fields/Ending_Hour__c.field-meta.xml
<CustomField>
    <fullName>Ending_Hour__c</fullName>
    <label>Ending Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>