force-app/main/default/objects/Operation_Meals_And_Rest_Calculation__mdt/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>StateCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
                <default>true</default>
                <label>CA</label>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>